[workspace]
resolver = "3"
members = ["gameserver", "httpserver", "server_config", "sonettobuf"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "ISC"
authors = ["Niangzhi's Tavern"]
repository = "https://github.com/NTavern/sonetto-server"

[workspace.dependencies]
server_config = { path = "server_config/" }

actix-web = { version = "4.10.2", features = ["openssl"] }
# remove vendored if you already have openssl-dev installed
# otherwise you'll need perl compiler
openssl = { version = "0.10.72", features = ["vendored"] }
flate2 = "1.1.1"
serde_json = "1.0.140"

tokio = { version = "1.44.2", features = ["full"] }
byteorder = "1.5.0"
bytes = "1.10.1"

prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"
sonettobuf = { path = "sonettobuf/" }
