[workspace]
resolver = "3"
members = ["gameserver", "httpserver", "common", "sonettobuf"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "ISC"
authors = ["Niangzi's Tavern"]
repository = "https://github.com/NTavern/sonetto-server"

[workspace.dependencies]
common = { path = "common/" }
thiserror = "2.0.12"

actix-web = { version = "4.10.2", features = ["openssl"] }
# remove vendored if you already have openssl-dev installed
# otherwise you'll need perl compiler
openssl = { version = "0.10.72", features = ["vendored"] }
flate2 = "1.1.1"
serde_json = "1.0.140"

tokio = { version = "1.44.2", features = ["full"] }
byteorder = "1.5.0"
bytes = "1.10.1"

prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.5"
sonettobuf = { path = "sonettobuf/" }

ansi_term = "0.12.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
