[package]
name = "gameserver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
byteorder.workspace = true
tokio.workspace = true
server_config.workspace = true
sonettobuf.workspace = true
bytes.workspace = true
