[package]
name = "gameserver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
byteorder.workspace = true
tokio.workspace = true
common.workspace = true
sonettobuf.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
rust-embed = "8.7.2"
