[package]
name = "httpserver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
actix-web.workspace = true
flate2.workspace = true
openssl.workspace = true
serde_json.workspace = true
server_config.workspace = true
