[package]
name = "httpserver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
axum-server.workspace = true
common.workspace = true
flate2.workspace = true
paste.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
